--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ts-nextjs-tailwind-starter",
+  "name": "foodconnected-ds",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -17,9 +17,12 @@
     "release": "standard-version",
     "push-release": "git push --follow-tags origin main",
     "postbuild": "next-sitemap",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@stitches/react": "^1.2.6",
     "clsx": "^1.1.1",
     "next": "^12.0.10",
     "react": "^17.0.2",
@@ -28,8 +31,18 @@
     "tailwind-merge": "^1.2.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.4",
     "@commitlint/cli": "^13.2.1",
     "@commitlint/config-conventional": "^13.2.0",
+    "@storybook/addon-actions": "^6.4.19",
+    "@storybook/addon-essentials": "^6.4.19",
+    "@storybook/addon-interactions": "^6.4.19",
+    "@storybook/addon-links": "^6.4.19",
+    "@storybook/addon-postcss": "^2.0.0",
+    "@storybook/builder-webpack5": "^6.4.19",
+    "@storybook/manager-webpack5": "^6.4.19",
+    "@storybook/react": "^6.4.19",
+    "@storybook/testing-library": "^0.0.9",
     "@svgr/webpack": "^6.2.1",
     "@tailwindcss/forms": "^0.4.0",
     "@testing-library/jest-dom": "^5.16.2",
@@ -40,6 +53,8 @@
     "@typescript-eslint/parser": "^4.33.0",
     "autoprefixer": "^10.4.2",
     "babel-jest": "^27.5.1",
+    "babel-loader": "^8.2.3",
+    "babel-plugin-macros": "^3.1.0",
     "eslint": "^7.32.0",
     "eslint-config-next": "^11.1.4",
     "eslint-config-prettier": "^8.3.0",
@@ -55,7 +70,8 @@
     "prettier-plugin-tailwindcss": "^0.1.7",
     "react-test-renderer": "^17.0.2",
     "standard-version": "^9.3.2",
-    "tailwindcss": "^3.0.22",
+    "tailwindcss": "^3.0.23",
+    "twin.macro": "^2.8.2",
     "typescript": "^4.5.5"
   },
   "lint-staged": {
@@ -66,5 +82,14 @@
     "src/**/*.{json,css,scss,md}": [
       "prettier -w"
     ]
+  },
+  "resolutions": {
+    "webpack": "^5"
+  },
+  "babelMacros": {
+    "twin": {
+      "preset": "stitches",
+      "stitchesConfig": "src/styles/stitches.config.ts"
+    }
   }
 }
