--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "postbuild": "next-sitemap",
     "prepare": "husky install",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "chromatic": "npx chromatic --project-token=6e349bb2e119"
   },
   "dependencies": {
     "@stitches/react": "^1.2.6",
@@ -55,6 +56,7 @@
     "babel-jest": "^27.5.1",
     "babel-loader": "^8.2.3",
     "babel-plugin-macros": "^3.1.0",
+    "chromatic": "^6.4.3",
     "eslint": "^7.32.0",
     "eslint-config-next": "^11.1.4",
     "eslint-config-prettier": "^8.3.0",
