--- a/package.json
+++ b/package.json
@@ -23,11 +23,12 @@
     "chromatic": "npx chromatic --project-token=6e349bb2e119"
   },
   "dependencies": {
+    "@radix-ui/colors": "^0.1.8",
     "@radix-ui/react-navigation-menu": "^0.1.2",
     "@radix-ui/react-select": "^0.1.1",
     "@stitches/react": "^1.2.8",
     "clsx": "^1.1.1",
-    "connected-ui-edge": "file:.yalc/connected-ui-edge",
+    "connected-ui-edge": "^0.0.30",
     "framer-motion": "^6.2.8",
     "next": "^12.1.6",
     "next-themes": "^0.1.1",
