--- a/package.json
+++ b/package.json
@@ -28,13 +28,15 @@
     "@radix-ui/react-select": "^0.1.1",
     "@stitches/react": "^1.2.8",
     "clsx": "^1.1.1",
-    "connected-ui-edge": "^0.0.30",
+    "connected-ui-edge": "^0.0.31",
     "framer-motion": "^6.2.8",
+    "gsap": "^3.10.4",
     "next": "^12.1.6",
     "next-themes": "^0.1.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
+    "react-use": "^17.3.2",
     "tailwind-merge": "^1.2.0"
   },
   "devDependencies": {
